header section added

--- a/index.html
+++ b/index.html
@@ -6,9 +6,31 @@
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="responsive.css">
     <title>g3-architects-resources</title>
+    <link rel="shortcut icon" href="https://maxst.icons8.com/vue-static/icon/landing/links/community/request1x.webp" type="image/x-icon">
 </head>
-<body>
-    <header>
+<body class="work-sans-font">
+    <header id="header">
+        <nav class="nav-bar display-flex">
+            <h3 class="nav-title">G3 Architects</h3>
+            <div class="nav-items ">
+                <ul class="display-flex">                         
+                    <li> <a href="">Home </a></li>
+                    <li> <a href="">About</a></li>
+                    <li><a href="">Contact Us</a></li>
+                    <li><a href="">Login</a></li>
+                </ul>
+            </div>
+        </nav>
+        <div class="baner">
+            <h1 class="baner-title">Brand New 
+                Group of Architects 
+                </h1>
+            <p class="baner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <button class="btn-primary">Explore More</button>
+        </div>
+        <div class="img-header"  >
+            <img src="./images/banner.png" alt="">
+        </div>
 
     </header>
     <main>
